--- a/index.html
+++ b/index.html
@@ -166,29 +166,9 @@
   
   <footer>
 
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Preguntas <br> frecuentes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"> Contáctanos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Prensa</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Conferencias</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Términos y <br> condiciones</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Privacidad</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Estudiantes</a>
-      </li>
-    </ul>
+   <ul>
+    <li>Todos los derechos reservados ©</li>
+   </ul>
 
 
   </footer>
